tdf#129481 Combine outliner indent and spacing undos

Makes one undo when indent or spacing attribute is applied to outliner

Change-Id: I1aefff746022552dec96f7cf76a5cb9540c84fc6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/86903
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>
(cherry picked from commit d6628ddaf6e2acf53c5a7cbbcb201d700cd95f54)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/87094
Reviewed-by: Xisco Faulí <xiscofauli@libreoffice.org>